<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:hint="@string/hint0"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#95a5a6"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnClr"
            android:textColor="#2980b9"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnDel"
            android:textColor="#c0392b"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSqrRoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnSrqRoot"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btnCubeRoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnCubeRoot"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnAbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnAbs"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnFlr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnFlr"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSqr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnSqr"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btnCube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnCube"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnLog"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnExp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnExp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnSin"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btnCos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnCos"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnTan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnTan"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnDiv"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btn7"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btn8"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btn9"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnMul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnMul"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btn4"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btn5"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btn6"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnSub"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btn1"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btn2"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btn3"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnAdd"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnPercent"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btn0"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnPoint"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/btnEquals"
            android:textColor="#27ae60"
            android:textSize="35sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>